testsuite/tests/misc/invalid_static_expr/invalid_binop.lkt
import common

@repr_name("foo" + "bar")
class FooNode implements Node[FooNode] {
}
